// Vitest Snapshot v1

exports[`Button Component > should have rounded-full class when props pill is set to true 1`] = `
"<button type=\\"button\\" class=\\"inline-flex items-center transition-colors font-medium select-none disabled:opacity-50 disabled:cursor-not-allowed focus:outline-none dark:focus:ring-offset-dark-eval-2 px-4 py-2 text-base bg-primary-500 text-white hover:bg-primary-600 rounded-full\\" disabled=\\"false\\">
  <!--v-if-->
</button>"
`;

exports[`Button Component > should render component and match snapshot 1`] = `
"<button type=\\"button\\" class=\\"inline-flex items-center transition-colors font-medium select-none disabled:opacity-50 disabled:cursor-not-allowed focus:outline-none dark:focus:ring-offset-dark-eval-2 px-4 py-2 text-base bg-primary-500 text-white hover:bg-primary-600 rounded-md\\" disabled=\\"false\\">
  <!--v-if-->
</button>"
`;
